@@ -21,3 +21,4 @@
 2.0.7 - Added: possibility to edit the weight before packet
       - Quick access links added during installation and removed during uninstallation
 2.0.8 - Removed: branch.js loading in Packeta order administration
+      - Removed: hooks processCarrier and paymentTop causing conflicts with other modules
